tests/comp/sem/invalid/call_wrong-4.mj
class A {

	public void test(boolean a) {
		/*** test(true, 3); ***/
	}

	public static void main(String[] args) {
	}

}
